the website is almost complete but uplaoding for testing puroposes

--- a/about.html
+++ b/about.html
@@ -3,30 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Ashraf Mugalli</title>
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <canvas id="backgroundCanvas"></canvas>
+
+    <nav class="floating-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html" class="active">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
         <section class="about">
-            <h1>About Me</h1>
-            <p>I am a cybersecurity and networking enthusiast with experience in various projects. I am passionate about building secure and efficient systems.</p>
+            <h1 class="animated-title">Meet Ashraf Mugalli</h1>
+            <p class="about-intro">
+                Some people <strong>follow</strong> cybersecurity trends. Others <strong>create</strong> them.  
+                I am <strong>Ashraf Mugalli</strong>—a relentless mind in the world of <strong>network security, Zero Trust architecture, and cybersecurity strategy</strong>.
+            </p>
+
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>The Architect of Secure Networks</h2>
+                    <p>
+                        I don’t just configure networks. I design <strong>fortresses</strong>.  
+                        I don’t just write policies. I craft <strong>roadmaps to invulnerability</strong>.  
+                        From <strong>network segmentation</strong> to <strong>identity-based access control</strong>, I turn complex security challenges into <strong>bulletproof infrastructures</strong>.  
+                    </p>
+
+                    <h2>The Mind Behind the Machine</h2>
+                    <p>
+                        While others hesitate, I <strong>build</strong>.  
+                        While others talk theory, I <strong>deploy solutions</strong>.  
+                        Leading the <strong>Zero Trust Model for Enterprise Networks</strong>, I ensure <strong>financial institutions</strong> don’t just comply with security standards—<strong>they define them</strong>.  
+                        If you’re looking for someone who checks boxes, that’s not me. I <strong>redefine the entire security checklist</strong>.
+                    </p>
+
+                    <h2>The Leader Who Executes</h2>
+                    <p>
+                        A team is only as strong as its weakest link—but under my leadership,  
+                        <strong>there are no weak links</strong>.  
+                        I work with some of the best, sharpening minds like Alisa Maloku, Hunter Russo, and Aidan Blackmon.  
+                        We’re not just students. We’re the <strong>next generation of cybersecurity pioneers</strong>.
+                    </p>
+
+                    <h2>The Future of Security</h2>
+                    <p>
+                        The digital battlefield is always evolving. <strong>So am I.</strong>  
+                        Security is more than firewalls and access lists. It’s <strong>strategy, discipline, and vision</strong>.  
+                        If you’re looking for <strong>a leader, an innovator, and a force in cybersecurity</strong>—you’ve found him.  
+                    </p>
+
+                    <a href="projects.html" class="cta">See My Work</a>
+                </div>
+
+                <div class="about-image">
+                    <img src="assets/ash.png" alt="Ashraf Mugalli">
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2025 Ashraf Mugalli | <a href="contact.html">Get in Touch</a></p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
