--- a/contact.html
+++ b/contact.html
@@ -3,30 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Contact | Ashraf Mugalli</title>
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <canvas id="backgroundCanvas"></canvas>
+
+    <nav class="floating-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+    </nav>
 
     <main>
         <section class="contact">
-            <h1>Contact</h1>
-            <p>Feel free to reach out via email or through my social media channels.</p>
+            <h1 class="animated-title">Get In Touch</h1>
+            <p class="contact-intro">
+                Whether you have a question, a project idea, or just want to talk cybersecurity,  
+                I'm always open to a conversation.
+            </p>
+
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h2>Email</h2>
+                    <p><a href="mailto:ashrafamugalli@gmail.com">ashrafamugalli@gmail.com</a></p>
+
+                    <h2>LinkedIn</h2>
+                    <p><a href="https://www.linkedin.com/in/ashrafmugallii" target="_blank">https://www.linkedin.com/in/ashrafmugalli</a></p>
+
+                    <h2>GitHub</h2>
+                    <p><a href="hhttps://github.com/Ashrafmugallii/" target="_blank">https://github.com/Ashrafmugallii</a></p>
+                </div>
+
+                <div class="contact-form">
+                    <h2>Send a Message</h2>
+                    <form action="https://formspree.io/f/xanqkzpk" method="POST">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="message" placeholder="Your Message" required></textarea>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+            </div>  
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2025 Ashraf Mugalli | <a href="mailto:ashraf@example.com">Contact Me</a></p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
