added new image

--- a/about.html
+++ b/about.html
@@ -23,47 +23,39 @@
         <section class="about">
             <h1 class="animated-title">Meet Ashraf Mugalli</h1>
             <p class="about-intro">
-                Some people <strong>follow</strong> cybersecurity trends. Others <strong>create</strong> them.  
-                I am <strong>Ashraf Mugalli</strong>—a relentless mind in the world of <strong>network security, Zero Trust architecture, and cybersecurity strategy</strong>.
+                Some people <strong>follow</strong>. Others <strong>lead</strong>.  
+                I create, build, and push boundaries. I am <strong>Ashraf Mugalli</strong>—driven by innovation, strategy, and the pursuit of excellence.
             </p>
 
             <div class="about-content">
                 <div class="about-text">
-                    <h2>The Architect of Secure Networks</h2>
+                    <h2>The Architect of Progress</h2>
                     <p>
-                        I don’t just configure networks. I design <strong>fortresses</strong>.  
-                        I don’t just write policies. I craft <strong>roadmaps to invulnerability</strong>.  
-                        From <strong>network segmentation</strong> to <strong>identity-based access control</strong>, I turn complex security challenges into <strong>bulletproof infrastructures</strong>.  
+                        I don’t just adapt to change—I <strong>anticipate</strong> it.  
+                        Every challenge is an opportunity, every obstacle a test of resilience.  
+                        I think beyond limits, design with precision, and execute with purpose.
                     </p>
 
-                    <h2>The Mind Behind the Machine</h2>
+                    <h2>The Mind Behind the Vision</h2>
                     <p>
-                        While others hesitate, I <strong>build</strong>.  
-                        While others talk theory, I <strong>deploy solutions</strong>.  
-                        Leading the <strong>Zero Trust Model for Enterprise Networks</strong>, I ensure <strong>financial institutions</strong> don’t just comply with security standards—<strong>they define them</strong>.  
-                        If you’re looking for someone who checks boxes, that’s not me. I <strong>redefine the entire security checklist</strong>.
+                        While others analyze, I <strong>act</strong>.  
+                        While others wait, I <strong>move forward</strong>.  
+                        I don’t settle for what exists—I <strong>imagine what’s next</strong>.  
+                        My work is about building strong foundations, shaping the future, and leaving a lasting impact.
                     </p>
 
-                    <h2>The Leader Who Executes</h2>
+                    <h2>The Future is Always Moving</h2>
                     <p>
-                        A team is only as strong as its weakest link—but under my leadership,  
-                        <strong>there are no weak links</strong>.  
-                        I work with some of the best, sharpening minds like Alisa Maloku, Hunter Russo, and Aidan Blackmon.  
-                        We’re not just students. We’re the <strong>next generation of cybersecurity pioneers</strong>.
-                    </p>
-
-                    <h2>The Future of Security</h2>
-                    <p>
-                        The digital battlefield is always evolving. <strong>So am I.</strong>  
-                        Security is more than firewalls and access lists. It’s <strong>strategy, discipline, and vision</strong>.  
-                        If you’re looking for <strong>a leader, an innovator, and a force in cybersecurity</strong>—you’ve found him.  
+                        Growth never stops. Evolution is constant.  
+                        Every step forward is a step toward something greater.  
+                        <strong>I don’t just keep up—I set the pace.</strong>
                     </p>
 
                     <a href="projects.html" class="cta">See My Work</a>
                 </div>
 
                 <div class="about-image">
-                    <img src="assets/ash.png" alt="Ashraf Mugalli">
+                    <img src="assets/ashraf.png" alt="Ashraf Mugalli">
                 </div>
             </div>
         </section>
