--- a/about.html
+++ b/about.html
@@ -21,34 +21,32 @@
 
     <main>
         <section class="about">
-            <h1 class="animated-title">Meet Ashraf Mugalli</h1>
+            <h1 class="animated-title">About Me</h1>
             <p class="about-intro">
-                Some people <strong>follow</strong>. Others <strong>lead</strong>.  
-                I create, build, and push boundaries. I am <strong>Ashraf Mugalli</strong>—driven by innovation, strategy, and the pursuit of excellence.
+                Technology isn’t just what I study, it’s what drives me.  
+                I’m <strong>Ashraf Mugalli</strong>, a cybersecurity and networking enthusiast,  
+                always looking for my next challenge.
             </p>
 
             <div class="about-content">
                 <div class="about-text">
-                    <h2>The Architect of Progress</h2>
+                    <h2>Curiosity & Problem-Solving</h2>
                     <p>
-                        I don’t just adapt to change—I <strong>anticipate</strong> it.  
-                        Every challenge is an opportunity, every obstacle a test of resilience.  
-                        I think beyond limits, design with precision, and execute with purpose.
+                        Whether it’s securing networks, writing code, or troubleshooting an issue,  
+                        I have fun turning problems into solutions.
                     </p>
 
-                    <h2>The Mind Behind the Vision</h2>
+                    <h2>Learning & Building</h2>
                     <p>
-                        While others analyze, I <strong>act</strong>.  
-                        While others wait, I <strong>move forward</strong>.  
-                        I don’t settle for what exists—I <strong>imagine what’s next</strong>.  
-                        My work is about building strong foundations, shaping the future, and leaving a lasting impact.
+                        Every project I start is an opportunity for me to learn something new.  
+                        From configuring secure network environments in Cisco Packet Tracer  
+                        to automating IT tasks with Python, learning is always hands-on.
                     </p>
 
-                    <h2>The Future is Always Moving</h2>
+                    <h2>My Next Steps</h2>
                     <p>
-                        Growth never stops. Evolution is constant.  
-                        Every step forward is a step toward something greater.  
-                        <strong>I don’t just keep up—I set the pace.</strong>
+                        I am always learning new things, starting new projects,  
+                        and preparing for the next step in my career.
                     </p>
 
                     <a href="projects.html" class="cta">See My Work</a>
